Revision history for Perl module Alien::Base.

1.03 2018-05-09 08:15:56 -0400
  - Fix warning

1.02 2018-03-11 14:33:44 -0400
  - Production release identical to 1.01_01

1.01_01 2018-03-09 17:40:12 -0500
  - Allow changing protocol with environment variables.

1.00 2017-10-01 06:21:53 -0400
  - Remove Alien::Base::PkgConfig
  - Require Alien::Build::PkgConfig 1.20

0.046 2017-09-13 20:54:21 -0400
  - Run alien_install_commands before any Perl tests in t/

0.045 2017-08-29 04:51:05 -0400
  - Fix broken skip in t/alien_base_modulebuild_pkgconfig.t

0.044 2017-08-23 13:20:29 -0400
  - Remove unnecessary prereqs on newer versions of Alien::Base

0.043 2017-08-17 03:48:08 -0400
  - Recommend Alien::Build instead
  - Require Module::Build 0.4004 for test_requires support

0.042 2017-07-26 11:35:49 -0400
  - Production release identical to 0.041_02

0.041_02 2017-07-25 21:52:38 -0400
  - Migrate test suite over to Test2::V0
  - Remove dependency on Test::More

0.041_01 2017-07-25 20:10:58 -0400
  - Remove dependency on List::MoreUtils

0.040 2017-03-29 01:26:09 -0400
  - Split Alien::Build::ModuleBuild from Alien::Build